--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,12 +2,12 @@
 <nav>
   <div class="nav-wrapper" style="border-bottom: 1px solid black; background-color: rgb(14, 10, 247);">
     <ul class="left hide-on-med-and-down">
-      <a href="#" class="brand-logo center" style="position">News from NPR<i class="fa fa-newspaper-o material-icons" style="height:auto;" aria-hidden="true"></i></a>
+      <a href="#" class="brand-logo center" style="position">News Scraper<i class="fa fa-newspaper-o material-icons" style="height:auto;" aria-hidden="true"></i></a>
       <li class="active"><a href="#">Home</a></li>
       <li  class="modal-trigger savedArticles" href="#saveModal"><a>Saved Articles</a></li>
     </ul>
     <ul class="hide-on-med-and-down valign-wrapper right">
-      <li><a class="waves-effect halfway-fab waves-effect waves-light hover searchArticle right"> Let's Scrape <i class="material-icons right">add</i></a></li>
+      <li><a class="waves-effect halfway-fab waves-effect waves-light hover searchArticle right"> Scrape Articles <i class="material-icons right">add</i></a></li>
     </ul>
     <ul class="left hide-on-large-only">
       <li class="modal-trigger savedArticles" href="#saveModal"><a>Saved Articles</a></li>
@@ -66,11 +66,11 @@
         <div class="col s12 m7">
           <div class="card horizontal">
             <div class="card-image">
-              <img src="https://lorempixel.com/100/190/nature/1">
+              <img src="https://lorempixel.com/100/190/nature/6">
             </div>
             <div class="card-stacked center">
               <div class="card-content valign-wrapper">
-                <p>Add a Note!</p>
+                <p>No Notes.</p>
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat hover addComment" style="color:white;">Add</a>
+    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat hover addComment" style="background-color: rgb(14, 10, 247); color: rgb(252, 252, 252);">Add</a>
   </div>
 </div>
 
